完善：服装配置在未勾选自动布局Live2D时不可使用

--- a/templates/index.html
+++ b/templates/index.html
@@ -111,7 +111,7 @@
                                 <input type="checkbox" id="enableLive2DCheckbox">
                                 <span style="font-weight: 500;">启用自动 Live2D 布局</span>
                             </label>
-                            <button class="btn btn-secondary btn-sm" id="costumeConfigBtn">🎭 服装配置</button>
+                            <button class="btn btn-secondary btn-sm" id="costumeConfigBtn" disabled>🎭 服装配置</button>
                             <button class="btn btn-secondary btn-sm" id="positionConfigBtn" disabled>📍 位置配置</button>
                         </div>
                     </div>
