--- a/templates/index.html
+++ b/templates/index.html
@@ -313,7 +313,9 @@
               <button class="btn btn-secondary" id="previewModeBtn">
                 对话预览
               </button>
-              <button class="btn btn-secondary" id="configBtn">配置管理</button>
+              <button class="btn btn-secondary" id="configBtn">
+                配置管理
+              </button>
               <button class="btn btn-secondary" id="batchProcessBtn">
                 批量处理
               </button>
